<resources>
    <string name="app_name">TradeStat</string>

    <!-- Description Fragment-->

    <string name="hello_blank_fragment">Hello in deals</string>
    <string name="description_fragment_text">Keep statistics, improve your strategy correctly and increase your income with TradeStat</string>
    <string name="let_s_started_desc_fragment">Let’s started</string>

    <!-- Welcome Fragment-->

    <string name="welcome_frag_title">Welcome</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>

    <!-- Registration Fragment-->

    <string name="register_title">Create an\naccount</string>
    <string name="name">Name</string>
    <string name="email">eMail</string>
    <string name="password">Password</string>
    <string name="create">Create</string>

    <!-- LogIn Fragment-->

    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="welcome_back">Welcome\nBack</string>

    <!-- Deals Fragment-->

    <string name="deals">Deals</string>
    <string name="search_view_hint">Search for deals</string>
    <string name="date">Date:</string>
    <string name="date_format">1.03.22 - 20.03.22</string>
    <string name="income">Income</string>
    <string name="count_of_trades">Count of trades:</string>

    <!-- Add Deal Fragment-->

    <string name="create_new_deal">Create new Deal,</string>
    <string name="it_s_simple">It’s simple</string>
    <string name="ticker_name">Ticker Name</string>
    <string name="enter_ticker_name">Enter ticker name</string>
    <string name="description">Description</string>
    <string name="enter_description_for_a_deal">Enter description for a deal</string>
    <string name="_10_21_2021">10/21/2021</string>
    <string name="hashtag">Hashtag</string>
    <string name="add_a_hashtag_to_group_deals_strong_trend">Add a hashtag to group deals (“Strong trend”)</string>
    <string name="amount_of_deal">Amount of deal</string>
    <string name="nothing">- - -</string>
    <string name="number_of_stocks">Number of stocks</string>
    <string name="create_deal">Save Deal</string>

    <!-- MENU -->
    <string name="only_positive_deals_menu">only positive deals</string>
    <string name="menu_all">all</string>
    <string name="only_negative_deals_menu">only negative deals</string>
    <string name="edit">Edit</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur adipiscing elit Ut et massa mi. Aliquam in hendrerit urna. Pellentesque sit amet sapien fringilla, mattis ligula consectetur, ultrices mauris. Maecenas vitae mattis tellus..</string>

</resources>