<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_top_background_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_title"
        style="@style/TitleText"
        android:text="@string/register_title"
        android:textColor="@color/black"
        android:layout_marginLeft="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_title">

        <EditText
            android:id="@+id/register_et_name"
            style="@style/TextComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:paddingLeft="10dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/register_et_email"
            style="@style/TextComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:paddingLeft="10dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/register_password"
            style="@style/TextComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableRight="@drawable/ic_show_password"
            android:hint="@string/password"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_register_create"
        style="@style/TitleText"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp"
        android:textSize="28sp"
        android:text="@string/create"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/blue"
        app:tint="@color/white"
        android:src="@drawable/ic_arrow_forward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_create">

        <TextView
            style="@style/TextComments"
            android:letterSpacing="0.16"
            android:text="@string/already_have_an_account"
            android:textColor="@color/dark_grey" />

        <TextView
            android:id="@+id/logInButton"
            style="@style/TextComments"
            android:layout_marginLeft="10dp"
            android:letterSpacing="0.1"
            android:text="@string/log_in"
            android:textColor="@color/blue" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>